added a navbar and moved the sign in and sign out button.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,5 +5,14 @@ body {
   background-color: antiquewhite;
   color: brown;
   text-align: center;
-  margin-top: 100px;
+}
+
+.navbar-dark .navbar-brand {
+  max-width: 2%;
+  max-height: 2%;
+}
+
+
+#logout-button, #login-button {
+  margin-left: auto;
 }
