added card bootstrap styling to Vendors.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,12 @@ body {
   max-height: 2%;
 }
 
-
-#logout-button, #login-button {
+#logout-button,
+#login-button {
   margin-left: auto;
 }
+
+// .card-body {
+//   display: flex;
+//   flex-wrap: wrap;
+// }
