added som styling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,3 +24,21 @@ body {
 //   align-items: flex-start;
 //   padding: 10px;
 // }
+
+// h5 {
+//   background: rgba(116, 116, 116, 0.75);
+//   border-top-left-radius: 21px;
+//   border-top-right-radius: 21px;
+// }
+
+#nameTitle {
+  background: rgba(116, 116, 116, 0.75);
+  border-top-left-radius: 21px;
+  border-top-right-radius: 21px;
+}
+
+.card-body {
+padding-top: 0%;
+padding-right: 0%;
+padding-left: 0%;
+}
