added a background image

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,10 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 body {
-  background-color: antiquewhite;
+  // background-color: antiquewhite;
+  background-image: url("https://artlogic-res.cloudinary.com/w_2560,h_1800,c_limit,f_auto,fl_lossy,q_60/artlogicstorage/jacksonfineart/images/view/1131a06cbafde027bd9bab31323d8c6ej.jpg");
+  background-repeat:no-repeat;
+  background-size: cover;
   color: brown;
   text-align: center;
 }
