made styling more consistent and added a page for performance information

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,9 +35,9 @@ body {
 // }
 
 #nameTitle {
-  background: rgba(116, 116, 116, 0.75);
-  border-top-left-radius: 21px;
-  border-top-right-radius: 21px;
+  background: #a52a2a;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .card-body {
